# Kurrent

./: .editorconfig  .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/test/kyrie/kurrent/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/test/kyrie/kurrent/: KurrentApp.kt  MainActivity.kt
app/src/main/java/test/kyrie/kurrent/navigation/: KurrentNavGraph.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/test/kyrie/kurrent/: ExampleUnitTest.kt
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: AndroidApplicationConventionPlugin.kt  AndroidFeatureConventionPlugin.kt  AndroidLibraryConventionPlugin.kt  KtlintConventionPlugin.kt
core/data/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
core/domain/: build.gradle.kts  consumer-rules.pro
core/ui/: build.gradle.kts  consumer-rules.pro
core/utility/: CMakeLists.txt  build.gradle.kts
core/utility/src/androidTest/java/test/kyrie/core/utility/: ExampleInstrumentedTest.kt
core/utility/src/main/cpp/: crypto_helper.cpp
core/utility/src/main/java/test/kyrie/core/utility/: CryptoHelperBridge.kt  CryptoValue.kt
core/utility/src/test/java/test/kyrie/core/utility/: ExampleUnitTest.kt
docs/: KTLINT_RULES_GUIDE.md  QUICK_REFERENCE.md
feature/calculator/: build.gradle.kts  consumer-rules.pro
feature/currency-list/: build.gradle.kts  consumer-rules.pro
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+69 files in other folders)
